# fortinet

./: .dockerignore  .gitattributes  .gitignore  ALIAS-GUIDE.md  AUTO-DEPLOY-GUIDE.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.agents  Dockerfile.all-in-one  Dockerfile.fortinet  Dockerfile.postgresql  Dockerfile.production  Dockerfile.redis  Dockerfile.standalone  IMPROVEMENTS-SUMMARY.md  ISSUES-RESOLVED.md  Makefile  OPTIMIZATION-SUMMARY.md  README-AUTO-DISCOVER.md  README-session-selector.md  README.md  SECRETS-SETUP.md  SETUP-CHECKLIST.md  advanced-dedup.sh  agent-config.yml  agent-manager.sh  apply-tmux-config.sh  apply_black_formatting.sh  automation_results.json  build-separated-images.sh  claude-agent-orchestrator.py  claude-agent-worker.py  claude-unified.sh  cloudflare-setup.md  commit_fix.sh  coverage.json  create-sessions.sh  dedup-final.sh  deployment-info.json  (+64 more)
.claude/: automation-manager.py  mcp-integration-config.json
.github/: CODEOWNERS  labels.yml  validate-workflow.sh
.serena/: project.yml
agents/: claude-monitor-agent.py  metric-labeling-engine.py  packet-analyzer.py  packet-traffic-analyzer.py  ts-squad-monitor.py
api/: README.md
archive/: ts-advanced.sh  ts-alias.sh  ts-bg-manager.sh  ts-claude-integration.sh  ts-compatibility.sh  ts-enhanced.sh  ts-interact.sh  ts-ipc.sh  ts-squad-integration.sh  ts-squad-wrapper.sh  ts-unified.sh
config/: .claude_agents_config.json  .claude_optimization_config.json  .claude_tools_config.json  .eslintrc.json  .pre-commit-config.yaml  .safety-policy.yml  agent-config.json  claude_aliases  config-template.json  config.json  deploy-config-example.json  deploy-config.json  eslint.config.js  init.sql  mcp-tools-config.json  monitoring-config.yml  pytest.ini  requirements_minimal.txt  setup.cfg
data/: api_config_template.json  itsm_automation_config.json  monitoring_config.json  redis_config.json
dev-tools/: simple-mock-server.py
docs/: 404.html  CNAME  CNCF_ARCHITECTURE.md  COMPLETE-SUMMARY.md  FortiGate_Nextrade_Presentation.pptx  FortiGate_Nextrade_Simple.txt  INIT_REPORT.md  INSTALL-SUMMARY.md  QUICKSTART-AUTO-DISCOVER.md  README-DISCOVER.md  README-TS-CRUD.md  README-TS-MASTER.md  README.md  SQ-QUICKSTART.md  SQ-README.md  SUMMARY-AUTO-DISCOVER.md  TS-COMPATIBILITY-GUIDE.md  TS-IPC-README.md  TS-QUICK-REFERENCE.md  TS-SQUAD-INTEGRATION-SUMMARY.md  TS-SQUAD-README.md  TS-UNIFIED-README.md  USAGE-DISCOVER.md  VERIFICATION-REPORT.md  _config.yml  grafana-upgrade-plan.md  index.html  robots.txt  sitemap.xml
list/: package-lock.json  package.json
migrations/: schema.sql
monitoring/: alerting-rules.yml  alertmanager-config.yml  grafana-dashboard.json  prometheus.yml
msa-gitops/: README.md
postgresql/: Dockerfile
postman/: FortiGate-API-Collection.json  FortiManager-API-Collection.json  test-runner.sh
redis/: Dockerfile  redis.conf
scripts/: add-cluster.sh  add-commands-to-ts.sh  analyze-pipeline-failures.py  apply-argocd-image-updater.sh  apply-configmap-update.sh  apply-pipeline-fixes.sh  argocd-setup.sh  argocd-sync.sh  argocd-webhook-handler.sh  backup-ts.sh  backup.sh  build-and-monitor.sh  build-and-push.sh  build-immutable-image.sh  build-standalone.sh  check-environments.sh  check-external-dns.sh  check-ingress-issue.py  cleanup-duplicate-argocd-configs.sh  cleanup-obsolete.sh  cleanup-unused-resources.py  cleanup.sh  cloudflare-dns-manager.sh  commit-and-deploy.sh  create-offline-package.sh  daily-report.sh  debug-ingress.sh  deploy-helm.sh  deploy-msa.sh  deploy-parallel.sh  deploy-simple.sh  deploy-with-watchtower.sh  docker-manage.sh  docker-start.sh  docker-stop.sh  execute-gitops-deploy.sh  fix-pipeline.sh  fix_and_commit.sh  fortinet-k8s-updater.service  fortinet-k8s-updater.timer  (+66 more)
slack-tmux-bridge/: .env.example  Dockerfile  QUICKSTART.md  README.md  REQUIRED_TOKENS.md  SETUP_GUIDE.md  docker-compose.yml  package-lock.json  package.json  (+1 more)
(+531 files in other folders)
